--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.174.128:3306/my_db
+    url: jdbc:mysql://192.168.174.128:3306/mianshiya
     username: root
     password: 123456
   # Redis 配置
