--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,15 +34,15 @@ spring:
 #    password: 123456
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
-#  elasticsearch:
-#    uris: http://localhost:9200
-#    username: root
-#    password: 123456
+elasticsearch:
+    uris: http://localhost:9200
+    username: root
+    password: 123456
   # 文件上传
-  servlet:
-    multipart:
+  #servlet:
+  #  multipart:
       # 大小限制
-      max-file-size: 10MB
+  #    max-file-size: 10MB
 server:
   address: 0.0.0.0
   port: 8101
